# chatidea

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  Dockerfile  Pipfile  README.md  README.old.md  README.org  config.yml  docker-compose.yml  domain.yml  dvc.yaml  package-lock.json  pyproject.toml  run.py  settings.py  trainer.py
chatidea/: __main__.py  actions.py  autocompleter.py  caller.py  commons.py  conversation.py  extractor.py  nltrasnslator.py  settings.py
chatidea/actions/: __init__.py  actions.py  common.py  meta.py
chatidea/config/: __init__.py  __strings.py  concept.py  extras.py  schema.py  view.py
chatidea/connectors/: index.html  telegram.py  webchat.py
chatidea/database/: broker.py  resolver.py
chatidea/patterns/: __init__.py  btn.py  msg.py  nlu.py
chatidea/tests/database/: test_broker.py
database/: columns2json.py  mssql2csv.py  schema2concept.py  schema2view.py
docs/: Makefile  README.md  architecture.rst  conf.py  db-configuration.rst  deploying.rst  index.rst  license.rst  middleware.rst  nlu-pipeline.rst
docs/extras/schemas/: Makefile  (+1 more)
modules/: actions.py  caller.py  conversation.py  extractor.py
modules/connectors/: index.html  webchat.py
modules/database/: broker.py  resolver.py
nlu-model/: .gitignore  Dockerfile  README.md  check.py  dvc.yaml  package-lock.json  params.yaml  pyproject.toml  translator.py
nlu-model/.dvc/: config
nlu-model/data/: .gitignore
nlu-model/models/: .gitignore
nlu-model/results/: .gitignore
nlu-model/writer/: .gitignore  chatito_template.chatito.dvc
resources/: Makefile  concept.schema.json  schema.schema.json  view.schema.json
resources/db/: db_concept_c.json  db_concept_d.json  db_concept_deib.json  db_schema_d.json  db_schema_deib.json  db_view_b.json  deib.sql  teachers.sql  virus.sql
writer/: .gitignore
(+1 files in other folders)
