[tool.poetry]
name = "chatidea"
version = "0.1.0"
description = ""
authors = ["Andrea Esposito <esposito_andrea99@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
python-dotenv = "^1.0.0"
PyYAML = "^6.0"
PyPika = "^0.48.9"
matplotlib = "^3.1,<3.6"
requests = "^2.30.0"
pyodbc = "^4.0.39"
nltk = "^3.8.1"
telepot = {version = "^12.7", optional = true}
aiohttp = "^3.8.4"
pydantic = "^1.10.8"
python-socketio = "^5.8.0"

[tool.poetry.extras]
telegram = ["telepot"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2,<7"
sphinx-rtd-theme = "^1.2.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^1.0.0"
sphinx-jsonschema = "^1.19.1"
sphinxcontrib-plantuml = "^0.25"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
