[tool.poetry]
name = "chatidea-nlu"
version = "0.1.0"
description = ""
authors = ["Andrea Esposito <esposito_andrea99@hotmail.com>"]
license = "GNU GPL v3.0"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
rasa = ">=3.6,<4.0"
nltk = "^3.8.1"
pyodbc = "^4.0.39"
pypika = "^0.48.9"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
